2009-08-06
	* new function of weighted.summary.
	* listcoef can handle models with weight now.

2009-01-17
	* check value of nlevels argument in cs_truthTable and reduce.default
	
2009-01-16
	* reduce is generic function now.